# semantic-document-search

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 20260418_547e0a5cc6b6_initial_ingest_jobs_and_job_transitions_.py
app/: config.py  main.py
app/evaluation/: metrics.py  queries.yaml  runner.py  schemas.py
app/ingestion/: chunker.py  indexer.py  models.py  parser.py  repository.py  router.py  schemas.py  service.py  state.py
app/retrieval/: bm25_index.py  context.py  pipeline.py  router.py  schemas.py  service.py  sparse_encoder.py
app/static/: index.html
docs/: PRD.md  eval-results-prod.txt  eval-results.txt
docs/adr/: 001-package-by-feature.md  002-fsm-for-ingestion.md  003-functional-pipeline-for-retrieval.md  004-qdrant-named-vectors-and-idf-modifier.md  005-hierarchical-chunking.md  006-fastembed-bm25-instead-of-handrolled.md  007-rrf-server-side-via-query-api.md  008-cohere-rerank-via-openrouter.md  009-sqlite-job-persistence.md  010-deterministic-job-id-from-url.md  011-repository-pattern-for-qdrant.md  012-collection-versioning.md  013-per-stage-graceful-degradation.md  014-fastembed-prewarm-in-docker.md  README.md
docs/diagrams/: README.md  architecture.md  ingestion-fsm.md  retrieval-pipeline.md
notebooks/: pipeline-demo.ipynb
scripts/: reencode_sparse.py  seed_corpus.py  seed_urls.txt  smoke_cleanup.py  smoke_ingestion.py
tests/: conftest.py
tests/evaluation/: test_metrics.py
tests/ingestion/: test_chunker.py  test_indexer.py  test_parser.py  test_repository.py  test_router.py  test_schemas.py  test_service.py  test_sources_dev_to.py  test_state_machine.py
tests/retrieval/: test_bm25_index.py  test_pipeline.py  test_router.py  test_service.py  test_sparse_encoder.py  test_stages_dense.py  test_stages_fusion.py  test_stages_hybrid.py  test_stages_parent_child.py  test_stages_reranker.py  (+1 more)
(+24 files in other folders)
