[project]
name = "semantic-document-search"
version = "0.2.0"
description = "Production-grade RAG search: package-by-feature, FSM ingestion, functional retrieval pipeline, Qdrant, OpenRouter"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Heitor Moura" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.20",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "openai>=1.50",
    "numpy>=1.26",
    "structlog>=24.0",
    "tenacity>=9.0",
    "scalar-fastapi>=1.0.3",
    "qdrant-client>=1.12",
    "transitions>=0.9",
    "langchain-text-splitters>=0.3",
    "httpx>=0.27",
    "fastembed>=0.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "schemathesis>=3.30",
    "pip-audit>=2.7",
    "bandit>=1.7",
    "respx>=0.21",
    "jupyter>=1.0",
    "pyyaml>=6.0",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "N", "SIM", "RUF",
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
# scripts/ has to do sys.path.insert before importing `app.*` (it runs
# standalone, not via the installed package entry point).
"scripts/*" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["alembic/versions"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py"]
